25W45C - Fixing Spacing Again

--- a/src/styles/components/sideBySide.module.css
+++ b/src/styles/components/sideBySide.module.css
@@ -24,7 +24,7 @@
   }
 
   .sideBySide > :last-child {
-    max-width: calc(100vw - var(--header-width) - 2rem);
+    max-width: calc(100vw - var(--header-width) - 1rem);
   }
 
   /* .sideBySide > :first-child {
